
Bug fixes:
..F....... [ZBX-10786] added placeholder for "Required string" field in web monitoring (vasilijs)

--------------------------------------------------------------------------------
Changes for 4.2.1rc1

New features:
..F....... [ZBXNEXT-5144] increased socket response size limit (vasilijs)

Bug fixes:
A.F....... [ZBX-15464] fixed error message for image uploads (talbergs)
..F....... [ZBX-10243] fixed not encoded ampersand for in URL parameter (talbergs)
...G...... [ZBX-15972] fixed possible crash of the windows agent when used "net.dns" item key (MVekslers)
..F....... [ZBX-15674] fixed map status to be displayed OK if there are no problem in submaps (talbergs)
.......PS. [ZBX-15970] fixed invalid update intervals being reported on Zabbix server when monitored through Zabbix proxy (vso)
........S. [ZBX-15643] fixed invalid to valid numbers conversion by del_zeros (asestakovs)
.......PS. [ZBX-15444] fixed trimming allowed characters from numeric values (asitals)
.....J.... [ZBX-15409] improved Zabbix java gateway error logging usability by adding item key to error message (vso)
........S. [ZBX-15844] fixed inability to start Zabbix server if alert manager process is late after alerters; thanks to Mikhail Makurov for the patch (akozlovs)
..F....... [ZBX-11043] implemented a better network discovery filter (Ivo)
..F....... [ZBX-10937] fixed top right global search field autocomplete not showing results when host name is being typed not first character and technical name when it differs from visible name (Ivo)
A.F....... [ZBX-10861] changed user name and password fields from being mandatory to optional in web scenarios and HTTP agent type items (Ivo)
...G...PS. [ZBX-10889] improved logging performance when high DebugLevel is used (viktors)
A......... [ZBX-15762] fixed API returns "countOutput", "select*": "count" results and "suppressed" property as integer (agriscenko)