@@ -889,6 +889,9 @@ output {
 .nowrap {
   white-space: nowrap; }
 
+.wordwrap {
+  word-break: break-all; }
+
 .overflow-table {
   overflow-x: auto;
   position: relative; }
