@@ -1343,6 +1343,10 @@ output {
 	white-space: nowrap;
 }
 
+.wordwrap {
+	word-break: break-all;
+}
+
 .overflow-table {
 	overflow-x: auto;
 	position: relative;
